Add verbosity option

--- a/template_var.html
+++ b/template_var.html
@@ -246,7 +246,7 @@ function toggle() {
 </div>
 
 <!-- List of overlapping regulatory features. Table generated and inserted by Python script. -->
-<div id="General" class="big_box"><h1>Expressed Quantitative Trait Locus</h1>
+<div id="General" class="big_box"><h1>GTEx eQTLs</h1>
 <!-- <div id="variant" class="general" >GTEx:<br> -->
 {{ gtex_gene_table }}
 <!-- </div> -->
